--- a/index.html
+++ b/index.html
@@ -1,88 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>MCD Memo Routing</title>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="MCD Memo Routing System - Send, Approve, and Find Memos." />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>MCD Memo Routing (Vue.js)</title>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      
       font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f9fa;
+      margin: 0;
     }
     header {
-      
+      background-color: white;
       padding: 20px;
-
       text-align: center;
+      border-bottom: 1px solid #dee2e6;
     }
     .header-logo {
-      max-width: 600px;
-      width: 100%;
+      max-width: 300px;
       height: auto;
     }
-    .title {
-      font-size: 2rem;
-      font-weight: 700;
-      color: #003366;
-      margin-top: 1rem;
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      margin-top: 2rem;
     }
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      max-width: 400px;
-      margin: 2rem auto;
+    .memo-card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 1.5rem;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
     }
-    @media (min-width: 576px) {
-      .button-container {
-        flex-direction: row;
-        justify-content: center;
-      }
+    .memo-card:hover {
+      transform: translateY(-5px);
     }
   </style>
 </head>
 <body>
+  <div id="app">
+    <header>
+      <img
+        src="https://images.contentstack.io/v3/assets/blt827157d7af7bc6d4/blt539b6710c5d23513/63306748763d011cd3e925bd/megaworld-logo.png"
+        alt="Megaworld Logo"
+        class="header-logo"
+      />
+      <h1 class="mt-3">MCD Memo Routing</h1>
+    </header>
 
-  <header role="banner">
-    <img
-      src="https://images.contentstack.io/v3/assets/blt827157d7af7bc6d4/blt539b6710c5d23513/63306748763d011cd3e925bd/megaworld-logo.png"
-      alt="Megaworld Corporation Logo"
-      class="header-logo"
-    />
-    <div class="title">MCD Memo Routing</div>
-  </header>
-
-  <main role="main" class="container text-center mt-5">
-    <section aria-label="Memo Routing Actions">
-      <div class="button-container">
-        <a
-          href="https://script.google.com/macros/s/AKfycbwntMTGQ9X4XQzG_TKOj1BhrjHEPMdVG8H8XXXGl9TOYPxAW59LliYgm3g6R_E8QZwDfA/exec"
-          class="btn btn-success"
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Send a Memo Form"
-        >Send a Memo</a>
-
-        <a
-          href="https://script.google.com/macros/s/AKfycbwG0Ns25BOhOqv0hZH79YEBlJLIL4hpuGA0xrC7liQOqaPVnmnLFOtg9LyOTfZXFdMb/exec"
-          class="btn btn-success"
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Approve a Memo Form"
-        >Approve a Memo</a>
-
-        <a
-          href="https://script.google.com/macros/s/AKfycbwdtLmaxc61t1jsPprCz8XBEkUTSaldhHR3qeJ45VHXTYxWF9W0Sn2QhTzriMw9ykpXkg/exec"
-          class="btn btn-success"
-          target="_blank"
-          rel="noopener noreferrer"
-          aria-label="Memo Finder Tool"
-        >Memo Finder</a>
+    <main class="container">
+      <div class="card-grid">
+        <div
+          v-for="(action, index) in memoActions"
+          :key="index"
+          class="memo-card text-center"
+        >
+          <h2>{{ action.title }}</h2>
+          <p>{{ action.description }}</p>
+          <a
+            :href="action.link"
+            class="btn btn-success"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            {{ action.button }}
+          </a>
+        </div>
       </div>
-    </section>
-  </main>
+    </main>
+  </div>
 
+  <script>
+    const { createApp } = Vue;
+
+    createApp({
+      data() {
+        return {
+          memoActions: [
+            {
+              title: 'Send a Memo',
+              description: 'Create and route a new memo for approval.',
+              link: 'https://script.google.com/macros/s/AKfycbwntMTGQ9X4XQzG_TKOj1BhrjHEPMdVG8H8XXXGl9TOYPxAW59LliYgm3g6R_E8QZwDfA/exec',
+              button: 'Open Form'
+            },
+            {
+              title: 'Approve a Memo',
+              description: 'Approve pending memos requiring your sign-off.',
+              link: 'https://script.google.com/macros/s/AKfycbwG0Ns25BOhOqv0hZH79YEBlJLIL4hpuGA0xrC7liQOqaPVnmnLFOtg9LyOTfZXFdMb/exec',
+              button: 'Approve Now'
+            },
+            {
+              title: 'Memo Finder',
+              description: 'Search previous memos by reference or date.',
+              link: 'https://script.google.com/macros/s/AKfycbwdtLmaxc61t1jsPprCz8XBEkUTSaldhHR3qeJ45VHXTYxWF9W0Sn2QhTzriMw9ykpXkg/exec',
+              button: 'Search Memos'
+            }
+          ]
+        };
+      }
+    }).mount('#app');
+  </script>
 </body>
 </html>
